--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ click==6.7
 Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pytz==2017.3
 six==1.11.0
+SQLAlchemy==1.2.1
 Werkzeug==0.14.1
